--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -3,7 +3,7 @@
   "name": "Notion Web Clipper",
   "version": "1.0",
   "description": "Salve páginas diretamente no Notion",
-  "permissions": ["storage", "tabs", "scripting"],
+  "permissions": ["storage", "tabs", "scripting", "contextMenus"],
   "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html"
