--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Notion Web Clipper",
+  "name": "Snaption Web Clipper",
   "version": "1.0",
-  "description": "Salve páginas diretamente no Notion",
+  "description": "Salve páginas diretamente no Notion com um clique.",
   "permissions": ["storage", "tabs", "scripting", "contextMenus"],
   "host_permissions": ["<all_urls>"],
   "action": {
@@ -10,6 +10,11 @@
   },
   "background": {
     "service_worker": "background.js"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "web_accessible_resources": [
     {
