--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0",
   "description": "Salve páginas diretamente no Notion com um clique.",
   "permissions": ["storage", "tabs", "scripting", "contextMenus"],
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": ["http://localhost/*", "https://notion-web-clipper-fgws.onrender.com/*"],
   "action": {
     "default_popup": "popup.html"
   },
